test_yuriiq/catalog/language/german/account/login.php
<?php

// text
$_['text_register_account']	= 'Mit dem Anlegen eines Kontos erfolgen zukünftige Bestellungen schneller, der Auftragsstatus kann nachverfolgt, bisherige Bestellungen angesehen, sowie persönliche Daten bearbeitet werden.';
$_['text_account']	= 'Konto';
$_['text_i_am_returning_customer']	= 'Bitte anmelden';
$_['text_login']	= 'Anmelden';
$_['text_returning_customer']	= 'Ich bin bereits Kunde';
$_['text_forgotten']	= 'Passwort vergessen';
$_['text_new_customer']	= 'Ich habe noch kein Konto';
$_['text_register']	= 'Neues Konto anlegen';

// error
$_['error_approved']	= 'Warnung: Ihr Konto erfordert Zustimmung, bevor Sie sich anmelden können.';
$_['error_login']	= 'Die Emailadresse und/oder Passwort sind nicht korrekt.';

// entry
$_['entry_password']	= 'Passwort:';
$_['entry_email']	= 'Emailadresse:';

// heading
$_['heading_title']	= 'Anmeldung';
?>